fix Result extra is not centered (#17786)

--- a/components/result/style/index.less
+++ b/components/result/style/index.less
@@ -57,6 +57,9 @@
     text-align: center;
     > * {
       margin-right: 8px;
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 
